# mcp-example

./: LICENSE  README.md  pyproject.toml
docs/api/: resources.md  tools.md
docs/examples/: basic-usage.md
docs/getting-started/: installation.md  introduction.md
src/: mcp_docs_server.py
